<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="my_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="media_streamer">SPOTIFY STREAMER</string>
    <string name="media_streamer_txt">This will launch spotify streamer app!</string>
    <string name="super_duo1">SCORES APP</string>
    <string name="super_duo1_txt">This will launch scores app!</string>
    <string name="super_duo2">LIBRARY APP</string>
    <string name="super_duo2_txt">This will launch library app!</string>
    <string name="ant_terminator">BUILD IT BIGGER</string>
    <string name="ant_terminator_txt">This will launch ant terminator app!</string>
    <string name="materialize">XYZ READER</string>
    <string name="materialize_txt">This will launch XYZ reader app!</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
    <string name="capstone_txt">This will launch my capstone app!</string>




</resources>
